[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/theme/main.tres" type="Theme" id=1]
[ext_resource path="res://ui/menus/settings/Settings.gd" type="Script" id=2]
[ext_resource path="res://ui/menus/settings/Preview.gd" type="Script" id=4]
[ext_resource path="res://ui/colorpicker/ColorPickerButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/gridmenu/GridMenuButton.tscn" type="PackedScene" id=6]

[node name="Settings" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="H" type="HBoxContainer" parent="."]
margin_left = 119.0
margin_top = 107.0
margin_right = 1303.0
margin_bottom = 693.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 1

[node name="TabContainer" type="TabContainer" parent="H"]
margin_right = 669.0
margin_bottom = 570.0
size_flags_vertical = 0
custom_constants/hseparation = 20
drag_to_rearrange_enabled = true
use_hidden_tabs_for_min_size = true

[node name="colors" type="VBoxContainer" parent="H/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 90.0
margin_right = -30.0
margin_bottom = -30.0
alignment = 1

[node name="boardcolor1" parent="H/TabContainer/colors" instance=ExtResource( 5 )]
margin_left = 141.0
margin_top = 51.0
margin_right = 467.0
margin_bottom = 157.0
size_flags_horizontal = 4
text = "boardcolor1"

[node name="boardcolor2" parent="H/TabContainer/colors" instance=ExtResource( 5 )]
margin_left = 141.0
margin_top = 172.0
margin_right = 467.0
margin_bottom = 278.0
size_flags_horizontal = 4
text = "boardcolor2"

[node name="PieceSet" parent="H/TabContainer/colors" instance=ExtResource( 6 )]
margin_left = 175.0
margin_top = 293.0
margin_right = 434.0
margin_bottom = 399.0
size_flags_horizontal = 4
text = "piece set"

[node name="window" type="VBoxContainer" parent="H/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 90.0
margin_right = -30.0
margin_bottom = -30.0
mouse_filter = 2
alignment = 1

[node name="VsyncButton" type="CheckBox" parent="H/TabContainer/window"]
margin_left = 213.0
margin_right = 486.0
margin_bottom = 140.0
focus_mode = 0
size_flags_horizontal = 4
pressed = true
enabled_focus_mode = 0
text = "vsync"

[node name="FullscreenButton" type="CheckBox" parent="H/TabContainer/window"]
margin_left = 165.0
margin_top = 155.0
margin_right = 534.0
margin_bottom = 295.0
focus_mode = 0
size_flags_horizontal = 4
enabled_focus_mode = 0
text = "fullscreen"

[node name="Borderless" type="CheckBox" parent="H/TabContainer/window"]
margin_left = 191.0
margin_top = 310.0
margin_right = 509.0
margin_bottom = 450.0
focus_mode = 0
size_flags_horizontal = 4
enabled_focus_mode = 0
text = "borders"

[node name="misc" type="VBoxContainer" parent="H/TabContainer"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="rainbow" type="CheckBox" parent="H/TabContainer/misc"]
margin_right = 609.0
margin_bottom = 140.0
focus_mode = 0
enabled_focus_mode = 0
text = "rainbow background"
align = 2

[node name="Container" type="VBoxContainer" parent="H"]
margin_left = 684.0
margin_right = 1184.0
margin_bottom = 586.0
rect_min_size = Vector2( 300, 0 )

[node name="resetbutton" type="Button" parent="H/Container"]
margin_left = 129.0
margin_right = 370.0
margin_bottom = 106.0
focus_mode = 0
size_flags_horizontal = 4
enabled_focus_mode = 0
text = "reset all"

[node name="PreviewLabel" type="Label" parent="H/Container"]
margin_top = 121.0
margin_right = 500.0
margin_bottom = 171.0
text = "Preview"
align = 1

[node name="Preview" type="GridContainer" parent="H/Container"]
margin_top = 186.0
margin_right = 500.0
margin_bottom = 586.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 4
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 5
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[connection signal="newcolor" from="H/TabContainer/colors/boardcolor1" to="." method="_on_boardcolor1_newcolor"]
[connection signal="newcolor" from="H/TabContainer/colors/boardcolor2" to="." method="_on_boardcolor2_newcolor"]
[connection signal="selected" from="H/TabContainer/colors/PieceSet" to="." method="_on_PieceSet_selected"]
[connection signal="toggled" from="H/TabContainer/window/VsyncButton" to="." method="_on_VsyncButton_toggled"]
[connection signal="toggled" from="H/TabContainer/window/FullscreenButton" to="." method="_on_FullscreenButton_toggled"]
[connection signal="toggled" from="H/TabContainer/window/Borderless" to="." method="_on_Borderless_toggled"]
[connection signal="toggled" from="H/TabContainer/misc/rainbow" to="." method="_on_rainbow_toggled"]
[connection signal="pressed" from="H/Container/resetbutton" to="." method="_on_resetbutton_pressed"]
